add the google account sign in test api