@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.ce.game.myapplication"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -17,14 +17,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
     compile 'com.android.support:design:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.8.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.0.0'
     compile 'com.android.support:support-v4:23.1.1'
 
     //ADD THESE LINES:// Android JUnit Runner
@@ -34,4 +41,8 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
 // Espresso core
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+    // fire base
+    compile 'com.google.firebase:firebase-auth:9.0.0'
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
 }
